<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="personal.shafi.com.currencyconverter.CurrencyConverter">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputBdt"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:hint="@string/input_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/tk_text"
                android:layout_toRightOf="@id/inputBdt"
                android:layout_marginTop="25dp"/>
        </RelativeLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choiceGroup"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usd_button"
                android:text="@string/usd_text"
                android:textSize="20sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/cd_text"
                android:id="@+id/canadian_button"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/calculateButton"
            android:text="@string/calculate_button"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/converted_value"
                android:layout_marginTop="25dp"
                android:textSize="25sp"
                android:hint="@string/converted_text"
                android:textColor="@color/brown"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currency_sign"
                android:textSize="18sp"
                android:text="@string/dollar"
                android:layout_toRightOf="@id/converted_value"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="10dp"/>

        </RelativeLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/back_button"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
